Added PreferenceHandler.java. Refactored classes that required SharedPreferences.java or SharedPreferencesHelper.java.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1193,6 +1193,7 @@
         <item>Nombre masculino markoviano completo</item>
         <item>Nombre femenino markoviano completo</item>
         <item>Nombre markoviano completo</item>
+        <item>Nombre secreto</item>
         <item>Nombre de usuario</item>
         <item>Nombre de usuario compuesto</item>
         <item>Nombre de usuario derivado</item>
