--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1193,6 +1193,7 @@
         <item>Male Markovian full name</item>
         <item>Female Markovian full name</item>
         <item>Markovian full name</item>
+        <item>Secret name</item>
         <item>Username</item>
         <item>Composite username</item>
         <item>Derived username</item>
